feat: implementar AppBlockerService, SharedPreferences y conexion real con la API para bloqueo de apps